--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="login-container">
-    <img class="logologin" src="assets/logofisio.png" alt="logo fisioterapia">  
+    <img class="logologin" src="/assets/logofisio.png" alt="logo fisioterapia">  
     <h1>BEM-VINDO!</h1>
-    <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+    <form #loginForm="ngForm">
       <div>
         <input placeholder="Email" type="email" id="email" name="email" ngModel required>
       </div>
       <div>
         <input placeholder="Senha" type="password" id="password" name="password" ngModel required>
       </div>
-      <button type="submit" [disabled]="!loginForm.valid">Login</button>
+      <button type="button" [disabled]="!loginForm.valid" (click)="logar()">Login</button>
     </form>
 </div>
