--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,5 @@ html, body {
     height: 100%; // Garante que o body ocupe a altura total
 }
   
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
