--- a/src/app/pacientes/pacientes.component.html
+++ b/src/app/pacientes/pacientes.component.html
@@ -25,7 +25,7 @@
 
 <div class="main-content">
     <h1>PACIENTES</h1>
-    <button class="custom-button">
+    <button class="custom-button" (click)="cadastrar()">
         <img src="assets/logonovopacientes.png" alt="Adicionar" class="icon-adicionar-pacientes">
         Adicionar Paciente
     </button>   
