--- a/src/app/novopaciente/novopaciente.component.scss
+++ b/src/app/novopaciente/novopaciente.component.scss
@@ -91,16 +91,16 @@
 
 .form-container {
     display: flex; 
+    flex-direction: row; /* Alinhar os campos na mesma linha */
     align-items: flex-start; 
     gap: 20px; 
     margin-bottom: 20px;
 }
 
 h1 {
-    padding: 15px;
     display: flex; 
-    justify-content: space-between; 
-    align-items: center;  
+    justify-content: space-between;
+    align-items: center;
     font-size: 20px;
     color: #08446C;
 }
@@ -149,7 +149,6 @@ p {
     padding-top: 35px;
     flex: 1; 
     padding-left: 45px;
-   
 }
 
 #data {
@@ -160,17 +159,62 @@ p {
     border-radius: 4px;
     box-sizing: border-box;
 }
-.estado-civil{
+
+.estado-civil {
     padding-top: 35px; 
     position: relative; 
     left: -35px; 
-
 }
-#estado-civil{
+
+#estado-civil {
     width: 300px;
     height: 45px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;    
+}
+
+.nacionalidade, .naturalidade, .data-nascimento, .peso {
+    flex: 1; /* Garante que todos os campos ocupem o mesmo espaço */
+    padding-top: 35px; /* Mantém o padding acima para os campos */
+    margin-left: 30px;
+}
+
+#nacionalidade, #naturalidade, #data-nascimento, #peso {
+    width: 100%; /* Faz todos os campos ocuparem toda a largura disponível */
+    height: 45px; 
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px;
+    box-sizing: border-box; 
+}
+
+.data-nascimento {
+    margin-bottom: 20px; /* Espaçamento abaixo do campo */
+    margin-top: 15px;
+    margin-right: 20px;
+}
+
+.data-nascimento p {
+    margin: 0; /* Remove margem padrão do parágrafo */
+}
+
+.peso {
+    margin-bottom: 15px; /* Espaçamento abaixo do campo */
+    margin-top: 15px;
+    margin-right: 90px;
+}
+
+.peso p {
+    margin: 0; /* Remove margem padrão do parágrafo */
+}
+
+.peso input {
+    width: 100%; /* Faz o campo ocupar toda a largura disponível */
+    height: 45px;
+    padding: 8px; /* Adiciona preenchimento interno */
+    border: 1px solid #ccc; /* Borda padrão */
+    border-radius: 4px; /* Bordas arredondadas */
+    font-size: 14px; /* Tamanho da fonte */
 }
