--- a/src/app/novopaciente/novopaciente.component.html
+++ b/src/app/novopaciente/novopaciente.component.html
@@ -80,4 +80,20 @@
             <input type="number" id="peso" name="peso" ngModel required placeholder="Insira seu peso">
         </div>        
     </div>
+    <div class="form-container">
+        <div class="altura">
+            <p>ALTURA:</p>
+            <input type="text" id="altura" name="altura" ngModel required placeholder="Insira sua altura">
+        </div>
+
+        <div class="endereco">
+            <p>ENDEREÇO:</p>
+            <input type="text" id="endereco" name="endereco" ngModel required placeholder="Insira seu endereço">
+        </div>
+
+        <div class="identidade">
+            <p> N° IDENTIDADE:</p>
+            <input type="text" maxlenght="10" id="identidade" name="identidade" ngModel required placeholder="00.000.000-0">
+        </div>
+    </div>
 </div>
