--- a/src/app/novopaciente/novopaciente.component.html
+++ b/src/app/novopaciente/novopaciente.component.html
@@ -37,7 +37,7 @@
             <input type="date" id="data" name="data" ngModel required>
         </div>
         <div class="estado-civil">
-            <p>ESTADO CÍVIL:</p>
+            <p>ESTADO CIVIL:</p>
             <select id="estado-civil" name="estado-civil" required>
                 <option value="" disabled selected>Selecione uma opção</option>
                 <option value="solteiro">Solteiro(a)</option>
@@ -96,4 +96,94 @@
             <input type="text" maxlenght="10" id="identidade" name="identidade" ngModel required placeholder="00.000.000-0">
         </div>
     </div>
+    <div class="form-container">
+        <div class="telefone">
+            <p>TELEFONE:</p>
+            <input type="text" id="telefone" name="telefone" ngModel required placeholder="(21) XXXXX-XXXX">
+        </div>
+
+        <div class="email">
+            <p>EMAIL:</p>
+            <input type="email" id="email" name="email" ngModel required placeholder="Insira seu email">
+        </div>
+
+        <div class="profissao">
+            <p>PROFISSÃO:</p>
+            <input type="profissao" id="profissao" name="profissao" ngModel required placeholder="Insira sua profissão">
+        </div>
+    </div>
+    <div class="diagnostico-container">
+        <label for="diagnostico">DIAGNÓSTICO CLÍNICO:</label>
+        <textarea id="diagnostico" placeholder="Insira o diagnóstico "></textarea>
+    </div>
+    <div class="dados-ficha">
+        <h6>DADOS FICHA ANAMNESE</h6>
+    </div>
+    <div class="queixa-container">
+        <label for="queixa">QUEIXA PRINCIPAL (QP):</label>
+        <textarea id="queixa" placeholder="Insira a queixa principal do paciente"></textarea>
+    </div>  
+    <div class="historia-doença">
+        <label for="historia-doença">HISTÓRIA DA DOENÇA ATUAL (HDA):</label>
+        <textarea id="historia-doença" placeholder="Insira a história da doença atual do paciente"></textarea>
+    </div> 
+    <div class="historia-patologica">
+        <label for="historia-patologica">HISTÓRIA PATÓLOGICA PREGRESSA (HPP):</label>
+        <textarea id="historia-patologica" placeholder="Insira a história da doença atual do paciente"></textarea>
+    </div> 
+    <div class="habitos">
+        <label for="habitos">HABITOS DE VIDA:</label>
+        <textarea id="habitos" placeholder="Insira os hábitos de vida do paciente "></textarea>
+    </div>   
+    <div class="historia-familiar">
+        <label for="historia-familiar">HISTÓRIA FAMILIAR:</label>
+        <textarea id="historia-familiar" placeholder="Insira a história familiar do paciente "></textarea>
+    </div> 
+    <div class="exames">
+        <h6>EXAMES</h6>
+    </div>  
+    <div class="exames-complementares">
+        <label for="exames-complementares">EXAMES COMPLEMENTARES:</label>
+        <textarea id="exames-complementares" placeholder="Insira os exames complementares do paciente "></textarea>
+    </div>
+    <div class="exame-fisico">
+        <label for="exame-fisico">EXAME FÍSICO-FUNCIONAL(CINÉTICO-FUNCIONAL):</label>
+        <textarea id="exame-fisico" placeholder="Insira o exame físico-funcional do paciente"></textarea>
+    </div>       
+    <div class="proagnostico">
+        <h6>DIAGNÓSTICO/PROAGNÓSTICO</h6>
+    </div>
+    <div class="diagnostico-fisio">
+        <label for="diagnostico-fisio">DIAGNÓSTICO FISIOTERAPÊUTICO:</label>
+        <textarea id="diagnostico-fisio" placeholder="Descrição técnica dos desvios físico-funcionais de maior relevância"></textarea>
+    </div> 
+    <div class="proagnostico-fisio">
+        <label for="proagnostico-fisio">PROAGNÓSTICO FISIOTERAPÊUTICO:</label>
+        <textarea id="proagnostico-fisio" placeholder="Compreende a estimativa de evolução do caso em relação ao diagnostico fisioterapêutico"></textarea>
+    </div> 
+    <div class="quantidade-atendimentos">
+        <label for="quantidade">Quantidade Provável de Atendimentos</label>
+        <textarea id="quantidade" placeholder="Digite a quantidade"></textarea>
+    </div>
+    <div class="tratamento">
+        <h6>TRATAMENTO PROPOSTO</h6>
+    </div> 
+    <div class="plano">
+        <label for="plano">PLANO TERAPÊUTICO:</label>
+        <textarea id="plano" placeholder="Descrição dos procedimentos fisioterápicos propostos relatando os recursos, métodos e técnicas a serem utilizados e o(s) objetivo(s) terapêutico(s) a ser(em) alcançado(s)"></textarea>
+    </div>
+    <div class="button-container">
+        <button class="button button-save">
+            <img src="/assets/save.png" alt="Salvar" class="icon">
+            Salvar Dados
+        </button>
+        <button class="button button-finish">
+            <img src="/assets/finalizar.png" alt="Finalizar" class="icon">
+            Finalizar Tratamento
+        </button>
+        <button class="button button-cancel">
+            <img src="/assets/cancela.png" alt="Cancelar" class="icon">
+            Cancelar Tratamento
+        </button>
+    </div>    
 </div>
