--- a/src/app/novopaciente/novopaciente.component.scss
+++ b/src/app/novopaciente/novopaciente.component.scss
@@ -91,7 +91,7 @@
 
 .form-container {
     display: flex; 
-    flex-direction: row; /* Alinhar os campos na mesma linha */
+    flex-direction: row; 
     align-items: flex-start; 
     gap: 20px; 
     margin-bottom: 20px;
@@ -182,7 +182,7 @@ p {
 }
 
 #nacionalidade{
-    width: 120%; /* Faz todos os campos ocuparem toda a largura disponível */
+    width: 120%;
     height: 45px; 
     padding: 10px; 
     border: 1px solid #ccc; 
@@ -198,7 +198,7 @@ p {
 }
 
 #naturalidade{
-    width: 100%; /* Faz todos os campos ocuparem toda a largura disponível */
+    width: 100%; 
     height: 45px; 
     padding: 10px; 
     border: 1px solid #ccc; 
@@ -215,7 +215,7 @@ p {
 }
 
 #data-nascimento{
-    width: 105%; /* Faz todos os campos ocuparem toda a largura disponível */
+    width: 105%; 
     height: 45px; 
     padding: 10px; 
     border: 1px solid #ccc; 
@@ -230,12 +230,12 @@ p {
 }
 
 #peso{
-    width: 155%; /* Faz o campo ocupar toda a largura disponível */
+    width: 155%;
     height: 45px;
-    padding: 10px; /* Adiciona preenchimento interno */
-    border: 1px solid #ccc; /* Borda padrão */
-    border-radius: 4px; /* Bordas arredondadas */
-    font-size: 14px; /* Tamanho da fonte */
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    font-size: 14px; 
 }
 #peso::placeholder{
     color: black;
@@ -247,7 +247,7 @@ p {
     flex: 1;
 }
 #altura{
-    width: 130%; /* Faz todos os campos ocuparem toda a largura disponível */
+    width: 140%;
     height: 45px; 
     padding: 10px; 
     border: 1px solid #ccc; 
@@ -270,6 +270,7 @@ p {
     border-radius: 4px;
     box-sizing: border-box;    
 }
+
 .identidade{
     padding-top: 35px; 
     position: relative; 
@@ -282,4 +283,461 @@ p {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+}
+
+#altura::placeholder{
+    color: black;
+}
+
+
+#endereco::placeholder{
+    color: black;
+}
+
+
+#identidade::placeholder{
+    color: black;
+}
+
+.telefone{
+    padding-top: 35px;
+    padding-left: 30px;
+    flex: 1;
+}
+#telefone{
+    width: 150%; 
+    height: 45px; 
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px;
+    box-sizing: border-box;
+
+}
+
+#telefone::placeholder{
+    color: black;
+}
+
+.email{
+    padding-top: 35px;
+    flex: 1; 
+    padding-left: 45px;
+    margin-right: 500px;
+    margin-left: 30px; 
+}
+#email{
+    width: 485%;
+    height: 45px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;    
+}
+
+#email::placeholder{
+    color: black;
+}
+
+.profissao{
+    padding-top: 35px; 
+    position: relative; 
+    left: -35px; 
+}
+#profissao{
+    width: 380px;
+    height: 45px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+#profissao::placeholder{
+    color: black;
+}
+
+.dados-ficha{
+    background-color: #eef0f5;
+    color: #696969;
+    padding: 14px; 
+    border-bottom: 30px;
+    width: calc(100% + 40px); 
+    margin: 0 -20px; 
+    position: relative; 
+    margin-top: 25px; 
+}
+
+.diagnostico-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px; 
+    padding-left: 30px; 
+    
+    label {
+        color: #0A74B7; 
+        font-size: 14px; 
+    }
+
+    textarea {
+        width: 100%; 
+        height: 100px; 
+        padding: 10px; 
+        border: 1px solid #ccc; 
+        border-radius: 4px; 
+        box-sizing: border-box; 
+    }
+
+    textarea::placeholder {
+        color: black; 
+    }
+}
+
+.queixa-container {
+    display: flex;
+    flex-direction: column; 
+    margin-top: 35px; 
+    padding-left: 30px; 
+    
+    label {
+        color: #0A74B7; 
+        font-size: 14px; 
+    }
+
+    textarea {
+        width: 100%; 
+        height: 200px; 
+        padding: 10px; /* Adiciona preenchimento interno */
+        border: 1px solid #ccc; /* Borda padrão */
+        border-radius: 4px; /* Bordas arredondadas */
+        box-sizing: border-box; /* Para garantir que o padding não afete a largura total */
+    }
+
+    textarea::placeholder {
+        color: black; /* Cor do texto do placeholder */
+    }
+}
+
+.historia-doença {
+    display: flex;
+    flex-direction: column; /* Coloca o label acima da textarea */
+    margin-top: 35px; /* Espaçamento superior */
+    padding-left: 30px; /* Alinhamento à esquerda */
+    
+    label {
+        color: #0A74B7; /* Cor do texto do label */
+        font-size: 14px; /* Tamanho da fonte */
+    }
+
+    textarea {
+        width: 100%; /* Faz o campo ocupar toda a largura disponível */
+        height: 200px; /* Altura do campo de texto */
+        padding: 10px; /* Adiciona preenchimento interno */
+        border: 1px solid #ccc; /* Borda padrão */
+        border-radius: 4px; /* Bordas arredondadas */
+        box-sizing: border-box; /* Para garantir que o padding não afete a largura total */
+    }
+
+    textarea::placeholder {
+        color: black; /* Cor do texto do placeholder */
+    }
+}
+
+.historia-patologica {
+    display: flex;
+    flex-direction: column; /* Coloca o label acima da textarea */
+    margin-top: 35px; /* Espaçamento superior */
+    padding-left: 30px; /* Alinhamento à esquerda */
+    
+    label {
+        color: #0A74B7; /* Cor do texto do label */
+        font-size: 14px; /* Tamanho da fonte */
+    }
+
+    textarea {
+        width: 100%; /* Faz o campo ocupar toda a largura disponível */
+        height: 200px; /* Altura do campo de texto */
+        padding: 10px; /* Adiciona preenchimento interno */
+        border: 1px solid #ccc; /* Borda padrão */
+        border-radius: 4px; /* Bordas arredondadas */
+        box-sizing: border-box; /* Para garantir que o padding não afete a largura total */
+    }
+
+    textarea::placeholder {
+        color: black; /* Cor do texto do placeholder */
+    }
+}
+
+.habitos {
+    display: flex;
+    flex-direction: column; /* Coloca o label acima da textarea */
+    margin-top: 35px; /* Espaçamento superior */
+    padding-left: 30px; /* Alinhamento à esquerda */
+    
+    label {
+        color: #0A74B7; /* Cor do texto do label */
+        font-size: 14px; /* Tamanho da fonte */
+    }
+
+    textarea {
+        width: 100%; /* Faz o campo ocupar toda a largura disponível */
+        height: 100px; /* Altura do campo de texto */
+        padding: 10px; /* Adiciona preenchimento interno */
+        border: 1px solid #ccc; /* Borda padrão */
+        border-radius: 4px; /* Bordas arredondadas */
+        box-sizing: border-box; /* Para garantir que o padding não afete a largura total */
+    }
+
+    textarea::placeholder {
+        color: black; /* Cor do texto do placeholder */
+    }
+}
+
+.historia-familiar {
+    display: flex;
+    flex-direction: column; 
+    margin-top: 35px; 
+    padding-left: 30px; 
+    
+    label {
+        color: #0A74B7; 
+        font-size: 14px; 
+    }
+
+    textarea {
+        width: 100%; 
+        height: 100px; 
+        padding: 10px; 
+        border: 1px solid #ccc; 
+        border-radius: 4px; 
+        box-sizing: border-box;
+    }
+
+    textarea::placeholder {
+        color: black; 
+    }
+}
+
+.exames{
+    background-color: #eef0f5;
+    color: #696969;
+    padding: 14px; 
+    border-bottom: 30px;
+    width: calc(100% + 40px); 
+    margin: 0 -20px; 
+    position: relative; 
+    margin-top: 25px; 
+}
+
+.exames-complementares {
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px; 
+    padding-left: 30px; 
+    
+    label {
+        color: #0A74B7; 
+        font-size: 14px; 
+    }
+
+    textarea {
+        width: 100%; 
+        height: 150px;
+        padding: 10px; 
+        border: 1px solid #ccc; 
+        border-radius: 4px; 
+        box-sizing: border-box; 
+    }
+
+    textarea::placeholder {
+        color: black; 
+    }
+}
+
+.exame-fisico {
+    display: flex;
+    flex-direction: column; 
+    margin-top: 35px; 
+    padding-left: 30px; 
+    
+    label {
+        color: #0A74B7; 
+        font-size: 14px; 
+    }
+
+    textarea {
+        width: 100%; 
+        height: 200px;
+        padding: 10px;
+        border: 1px solid #ccc; 
+        border-radius: 4px; 
+        box-sizing: border-box; 
+    }
+
+    textarea::placeholder {
+        color: black; 
+    }
+}
+
+.proagnostico{
+    background-color: #eef0f5;
+    color: #696969;
+    padding: 14px; 
+    border-bottom: 30px;
+    width: calc(100% + 40px); 
+    margin: 0 -20px; 
+    position: relative; 
+    margin-top: 25px; 
+}
+
+.diagnostico-fisio {
+    display: flex;
+    flex-direction: column; 
+    margin-top: 35px; 
+    padding-left: 30px; 
+    
+    label {
+        color: #0A74B7; 
+        font-size: 14px; 
+    }
+
+    textarea {
+        width: 100%;
+        height: 150px; 
+        padding: 10px; 
+        border: 1px solid #ccc;
+        border-radius: 4px; 
+        box-sizing: border-box;
+    }
+
+    textarea::placeholder {
+        color: black; 
+    }
+}
+
+.proagnostico-fisio {
+    display: flex;
+    flex-direction: column; 
+    margin-top: 35px; 
+    padding-left: 30px; 
+    
+    label {
+        color: #0A74B7; 
+        font-size: 14px; 
+    }
+
+    textarea {
+        width: 100%;    
+        height: 150px; 
+        padding: 10px; 
+        border: 1px solid #ccc; 
+        border-radius: 4px; 
+        box-sizing: border-box; 
+    }
+
+    textarea::placeholder {
+        color: black; 
+    }
+}
+
+.quantidade-atendimentos {
+    display: flex;
+    flex-direction: column; 
+    margin-top: 35px; 
+    padding-left: 30px; 
+    
+    label {
+        color: #0A74B7; 
+        font-size: 14px; 
+    }
+
+    textarea {
+        width: 20%; 
+        height: 50%; 
+        padding: 10px; 
+        border: 1px solid #ccc; 
+        border-radius: 4px; 
+        box-sizing: border-box; 
+    }
+
+    textarea::placeholder {
+        color: black; 
+    }
+}
+
+.tratamento{
+    background-color: #eef0f5;
+    color: #696969;
+    padding: 14px; 
+    border-bottom: 30px;
+    width: calc(100% + 40px); 
+    margin: 0 -20px; 
+    position: relative; 
+    margin-top: 25px; 
+}
+
+.plano {
+    display: flex;
+    flex-direction: column; 
+    margin-top: 35px; 
+    padding-left: 30px; 
+    
+    label {
+        color: #0A74B7; 
+        font-size: 14px;
+    }
+
+    textarea {
+        width: 100%; 
+        height: 300px; 
+        padding: 10px; 
+        border: 1px solid #ccc; 
+        border-radius: 4px; 
+        box-sizing: border-box; 
+    }
+
+    textarea::placeholder {
+        color: black; 
+    }
+}
+
+.button-container {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    margin-top: 150px; 
+}
+
+.button {
+    display: flex; 
+    height: 40px;
+    align-items: center; 
+    border: none; 
+    border-radius: 4px; 
+    padding: 10px 15px; 
+    font-size: 16px; 
+    cursor: pointer; 
+}
+
+
+.button-save {
+    background-color: #08446C; 
+    color: #fff;
+    margin-left: 10px;
+}
+
+
+.button-finish {
+    background-color: #26A41B; 
+    color: #fff;
+    margin-left: 630px; 
+}
+
+.button-cancel {
+    background-color: #D82929; 
+    color: #fff; 
+    margin-left: 20px; 
+}
+
+.icon {
+    margin-right: 5px; 
 }
