--- a/src/app/novopaciente/novopaciente.component.html
+++ b/src/app/novopaciente/novopaciente.component.html
@@ -176,10 +176,10 @@
             <img src="/assets/save.png" alt="Salvar" class="icon">
             Salvar Dados
         </button>
-        <button class="button button-finish">
+        <button class="button button-finish" (click)="salvarPaciente()">
             <img src="/assets/finalizar.png" alt="Finalizar" class="icon">
             Finalizar Tratamento
-        </button>
+          </button>
         <button class="button button-cancel">
             <img src="/assets/cancela.png" alt="Cancelar" class="icon">
             Cancelar Tratamento
