--- a/src/app/novopaciente/novopaciente.component.html
+++ b/src/app/novopaciente/novopaciente.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar">
-    <a class="navbar-brand">Minha conta</a>
+    <div class="relative-container">
+        <img src="/assets/logofisio.png" alt="MinhaConta" class="logoFisio">
+        <span class="tituloFisioterapia">Fisioterapia</span>
+    </div>
     <span class="separator"></span>
     <a class="navbar-brand" id="dashboard">Meu dashboard</a>
     <a class="navbar-brand ml-auto">Administrador <span class="arrow-down"></span></a>
@@ -31,16 +34,16 @@
     <div class="form-container">
         <div class="nome-paciente">
             <p>NOME:</p>
-            <input placeholder="Insira seu nome" type="text" formControlName="nome">
+            <input placeholder="Insira seu nome" type="text" formControlName="nome" class="nome">
         </div>
         <div class="data-avaliacao">
             <p>DATA DA AVALIAÇÃO:</p>
-            <input type="date" formControlName="dataAvaliacao">
+            <input type="date" formControlName="dataAvaliacao" class="dataAvaliacao">
         </div>
         
         <div class="estado-civil">
             <p>ESTADO CIVIL:</p>
-            <select formControlName="estadoCivil">
+            <select formControlName="estadoCivil" class="estadoCivil">
                 <option value="" disabled selected>Selecione uma opção</option>
                 <option value="solteiro">Solteiro(a)</option>
                 <option value="casado">Casado(a)</option>
@@ -50,18 +53,18 @@
         </div>
     </div>
     <div class="form-container">
-        <div class="nacionalidade">
+        <div class="nacionalidade-div">
             <p>NACIONALIDADE:</p>
-            <select formControlName="nacionalidade">
+            <select formControlName="nacionalidade" class="nacionalidade">
                 <option value="" disabled selected>Selecione uma opção</option>
                 <option value="brasileiro">Brasileiro</option>
                 <option value="estrangeiro">Estrangeiro</option>
             </select>
         </div>
         
-        <div class="naturalidade">
+        <div class="naturalidade-div">
             <p>NATURALIDADE (UF):</p>
-            <select formControlName="naturalidade">
+            <select formControlName="naturalidade" class="naturalidade">
                 <option value="" disabled selected>Selecione uma opção</option>
                 <option value="sp">São Paulo</option>
                 <option value="rj">Rio de Janeiro</option>
@@ -73,44 +76,44 @@
         
         <div class="data-nascimento">
             <p>DATA DE NASCIMENTO:</p>
-            <input type="date" formControlName="dataNascimento">
+            <input type="date" formControlName="dataNascimento" class="dataNascimento">
         </div>
     
-        <div class="peso">
+        <div class="peso-div">
             <p>PESO (kg):</p>
-            <input type="number" formControlName="peso" placeholder="Insira seu peso">
+            <input type="number" formControlName="peso" class="peso" placeholder="Insira seu peso">
         </div>        
     </div>
     <div class="form-container">
-        <div class="altura">
+        <div class="altura-div">
             <p>ALTURA:</p>
-            <input type="text" formControlName="altura" placeholder="Insira sua altura">
+            <input type="text" formControlName="altura" class="altura" placeholder="Insira sua altura">
         </div>
 
-        <div class="endereco">
+        <div class="endereco-div">
             <p>ENDEREÇO:</p>
-            <input type="text" formControlName="endereco" placeholder="Insira seu endereço">
+            <input type="text" formControlName="endereco" class="endereco" placeholder="Insira seu endereço">
         </div>
 
         <div class="identidade">
             <p> N° IDENTIDADE:</p>
-            <input type="text" maxlength="10" formControlName="numeroIdentidade" placeholder="00.000.000-0">
+            <input type="text" maxlength="10" formControlName="numeroIdentidade" class="numeroIdentidade" placeholder="00.000.000-0">
         </div>
     </div>
     <div class="form-container">
-        <div class="telefone">
+        <div class="telefone-div">
             <p>TELEFONE:</p>
-            <input type="text" formControlName="telefone" placeholder="(21) XXXXX-XXXX">
+            <input type="text" formControlName="telefone" class="telefone" placeholder="(21) XXXXX-XXXX">
         </div>
 
-        <div class="email">
+        <div class="email-div">
             <p>EMAIL:</p>
-            <input type="email" formControlName="email" placeholder="Insira seu email">
+            <input type="email" formControlName="email" class="email" placeholder="Insira seu email">
         </div>
 
-        <div class="profissao">
+        <div class="profissao-div">
             <p>PROFISSÃO:</p>
-            <input type="profissao" formControlName="profissao" placeholder="Insira sua profissão">
+            <input type="profissao" formControlName="profissao" class="profissao" placeholder="Insira sua profissão">
         </div>
     </div>
     <div class="diagnostico-container">
@@ -133,7 +136,7 @@
         <textarea formControlName="historiapatologica" placeholder="Insira a história da doença atual do paciente"></textarea>
     </div> 
     <div class="habitos">
-        <label for="habitos">HABITOS DE VIDA:</label>
+        <label for="habitos-div">HABITOS DE VIDA:</label>
         <textarea formControlName="habitos" placeholder="Insira os hábitos de vida do paciente "></textarea>
     </div>   
     <div class="historia-familiar">
