--- a/src/app/novopaciente/novopaciente.component.scss
+++ b/src/app/novopaciente/novopaciente.component.scss
@@ -4,6 +4,23 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    color: white;
+}
+
+.relative-container {
+    position: relative; /* Define um contêiner relativo */
+}
+
+.logoFisio {
+    width: 59px;
+    height: auto;
+    position: absolute; /* Remove o elemento do fluxo normal */
+    top: -23px; /* Ajuste conforme necessário */
+    right: 0; /* Alinha a imagem à direita do contêiner */
+}
+.tituloFisioterapia {
+    left: 400px; /* Aumenta o espaço à esquerda */  /* Ajusta o espaço acima, se necessário */
+    /* Você pode usar margin-right para mover à direita */
 }
 
 .navbar-brand {
@@ -15,12 +32,12 @@
     height: 50px; 
     width: 2px; 
     background-color: white;
-    margin-left: 90px; 
+    margin-left: 175px; 
     margin-right: -35px;
 }
 
 #dashboard {
-    margin-left: 20px;
+    margin-left: 15px;
 }
 
 .ml-auto {
@@ -131,7 +148,7 @@ p {
     flex: 1; 
 }
 
-#nome {
+.nome {
     height: 45px; 
     padding: 10px; 
     border: 1px solid #ccc; 
@@ -140,7 +157,7 @@ p {
     width: 100%;
 }
 
-#nome::placeholder {
+.nome::placeholder {
     color: black; 
     padding-left: 10px;
 }
@@ -151,7 +168,7 @@ p {
     padding-left: 45px;
 }
 
-#data {
+.dataAvaliacao {
     width: 80%;
     height: 45px;
     padding: 10px;
@@ -166,7 +183,7 @@ p {
     left: -35px; 
 }
 
-#estado-civil {
+.estadoCivil {
     width: 300px;
     height: 45px;
     padding: 10px;
@@ -175,13 +192,13 @@ p {
     box-sizing: border-box;    
 }
 
-.nacionalidade{
+.nacionalidade-div{
     padding-top: 35px;
     padding-left: 30px;
     flex: 1; 
 }
 
-#nacionalidade{
+.nacionalidade{
     width: 120%;
     height: 45px; 
     padding: 10px; 
@@ -190,14 +207,14 @@ p {
     box-sizing: border-box;
 }
 
-.naturalidade{
+.naturalidade-div{
     padding-top: 35px;
     padding-left: 30px;
     flex: 1; 
     margin-left: 55px;
 }
 
-#naturalidade{
+.naturalidade{
     width: 100%; 
     height: 45px; 
     padding: 10px; 
@@ -214,7 +231,7 @@ p {
     margin-left: 10px;
 }
 
-#data-nascimento{
+.dataNascimento{
     width: 105%; 
     height: 45px; 
     padding: 10px; 
@@ -223,13 +240,13 @@ p {
     box-sizing: border-box;
 }
 
-.peso {
+.peso-div {
     margin-right: 135px;
     padding-top: 35px;
     margin-left: 50px;
 }
 
-#peso{
+.peso{
     width: 155%;
     height: 45px;
     padding: 10px; 
@@ -237,16 +254,16 @@ p {
     border-radius: 4px; 
     font-size: 14px; 
 }
-#peso::placeholder{
+.peso::placeholder{
     color: black;
 }
 
-.altura{
+.altura-div{
     padding-top: 35px;
     padding-left: 30px;
     flex: 1;
 }
-#altura{
+.altura{
     width: 140%;
     height: 45px; 
     padding: 10px; 
@@ -255,14 +272,14 @@ p {
     box-sizing: border-box;
 
 }
-.endereco{
+.endereco-div{
     padding-top: 35px;
     flex: 1; 
     padding-left: 45px;
     margin-right: 500px;
     margin-left: 35px; 
 }
-#endereco{
+.endereco{
     width: 520%;
     height: 45px;
     padding: 10px;
@@ -276,7 +293,7 @@ p {
     position: relative; 
     left: -35px; 
 }
-#identidade{
+.numeroIdentidade{
     width: 380px;
     height: 45px;
     padding: 10px;
@@ -285,26 +302,26 @@ p {
     box-sizing: border-box;
 }
 
-#altura::placeholder{
+.altura::placeholder{
     color: black;
 }
 
 
-#endereco::placeholder{
+.endereco::placeholder{
     color: black;
 }
 
 
-#identidade::placeholder{
+.identidade::placeholder{
     color: black;
 }
 
-.telefone{
+.telefone-div{
     padding-top: 35px;
     padding-left: 30px;
     flex: 1;
 }
-#telefone{
+.telefone{
     width: 150%; 
     height: 45px; 
     padding: 10px; 
@@ -314,18 +331,18 @@ p {
 
 }
 
-#telefone::placeholder{
+.telefone::placeholder{
     color: black;
 }
 
-.email{
+.email-div{
     padding-top: 35px;
     flex: 1; 
     padding-left: 45px;
     margin-right: 390px;
     margin-left: 75px; 
 }
-#email{
+.email{
     width: 270%;
     height: 45px;
     padding: 10px;
@@ -334,16 +351,16 @@ p {
     box-sizing: border-box;    
 }
 
-#email::placeholder{
+.email::placeholder{
     color: black;
 }
 
-.profissao{
+.profissao-div{
     padding-top: 35px; 
     position: relative; 
     left: -35px; 
 }
-#profissao{
+.profissao{
     width: 260px;
     height: 45px;
     padding: 10px;
@@ -352,7 +369,7 @@ p {
     box-sizing: border-box;
 }
 
-#profissao::placeholder{
+.profissao::placeholder{
     color: black;
 }
 
